# Activity-cliffs

./: .gitattributes  .gitignore  CLAUDE.md  CONTINUATION_PLAN.md  INCOMING_FINDINGS.md  M8_INTERACTIVE_EXPLAINABILITY_PLAN.md  OOD_TESTING_PLAN.md  PROGRESS_LOG.md  README.md  REVISION_PLAN.md  STATUS.md  activity-cliff-modeling-prototype_b030770a.plan.md  environment.local.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: vision_board.html
evolve/: ANTI_GAMING_PLAN.md  evaluate.py  initial.py  manual_evolve.py  ml_ceiling.py  ml_ceiling_v2.py  ml_ceiling_v3.py  position_ceiling.py  run_evo.py
evolve/candidates/: gen1_v0_baseline.py  gen1_v1_l2norm.py  gen1_v2_logp_dominant.py  gen1_v3_interactions.py  gen1_v4_signed.py  gen1_v5_threshold.py  gen1_v6_dissim_focus.py  gen1_v7_rankbased.py  gen1_v8_maxfeature.py  gen2_v0_baseline_12feat.py  gen2_v1_ridge_optimal.py  gen2_v2_env_only.py  gen2_v3_env_plus_deltas.py  gen2_v4_multiplicative.py  gen2_v5_mean_delta_direct.py  gen2_v6_env_gated_threshold.py  (+1 more)
notebooks/: activity_cliffs_demo.ipynb
scripts/: __init__.py  build_evidence_index.py  compute_3d_context.py  compute_change_types.py  compute_mmp_features.py  extract_mmps.py  list_targets.py  mine_cliffs.py  pharmacophore_homology.py  plot_evolution_progression.py  prepare_evolve_data.py  prepare_evolve_data_v2.py  prepare_evolve_data_v3.py  prepare_position_data.py  run_demo.py  train_baselines.py  train_change_type_model.py  train_contrastive.py  train_final_model.py  visualize_series.py
webapp/: app.py  predict.py
(+33 files in other folders)
